@@ -1,5 +1,5 @@
 /* @author  pjfl@cpan.org (Peter Flanigan)
- * @version 0.2.5
+ * @version 0.2.6
  */
 @import "wcom-05-constants";
 form.classic {
@@ -45,8 +45,8 @@ form.classic {
                     25px 35px 20px var(--shadow-darkest-semitrans),
                     25px 30px 30px var(--shadow-darkest-semitrans),
                     inset -20px -20px 25px var(--shadow-lightest-semitrans);
-        height: 20rem; transform: translate(-10rem, 3rem);
-        transition: 0.25s; width: 20rem;
+        transform: translate(-10rem, 3rem); transition: 0.25s;
+        height: 21rem; width: 21rem;
         &::before, &::after {
             border-radius: 62% 38% 24% 76% / 59% 60% 40% 41%;
         }
@@ -71,21 +71,38 @@ form.classic {
                 border-radius: 50%;
             }
             &:nth-child(1 of .droplet) {
-                offset: circle(17rem) calc(-9% + (0 * 9%)) 0deg;
+                offset: circle(17rem) calc(-9% + (0 * 9%)) 5deg;
             }
             &:nth-child(2 of .droplet) {
                 offset: circle(17rem) calc(-9% + (1 * 9%)) 0deg;
             }
             &:nth-child(3 of .droplet) {
-                offset: circle(17rem) calc(-9% + (2 * 9%)) 0deg;
+                offset: circle(17rem) calc(-9% + (2 * 9%)) -5deg;
             }
         }
         .form-wrapper {
             border-radius: 62% 38% 24% 76% / 59% 60% 40% 41%;
-            height: 19rem; padding: 2rem 3.5rem 0 0;
-            transform: translateY(0.5rem); width: 19rem;
-            .alert-info {
+            height: 20rem; padding: 2rem 3.5rem 0 0; text-align: right;
+            transform: translateY(0.5rem); width: 20rem;
+            legend {
+                text-align: left;
+            }
+            .alert-info, .form-messages {
                 text-align: right;
+            }
+            .form-messages {
+                display: none;
+            }
+            .form-title {
+                background: var(--bg-dark);
+                border-radius: 44% 56% 65% 35% / 57% 58% 42% 43%;
+                box-shadow:
+                    inset 10px 10px 10px var(--shadow-darkest-semitrans),
+                    15px 25px 10px var(--shadow-darkest-semitrans),
+                    15px 20px 20px var(--shadow-darkest-semitrans),
+                    inset -10px -10px 15px var(--shadow-lightest-semitrans);
+                height: 4rem; offset: circle(17rem at -90% 0%) 0% -5deg;
+                padding: 1.25rem 0 0 0.5rem; position: absolute; width: 5rem;
             }
         }
         .input-field.floating {
@@ -234,6 +251,9 @@ form.classic {
                 top: -0.25rem;
             }
         }
+        & > .checkbox-wrapper {
+            grid-area: input;
+        }
         span.field-label {
             border: 2px solid transparent; padding: 0.125rem 0.25rem;
             position: absolute; top: 1.3175rem; transition: top 0.5s;
@@ -256,7 +276,7 @@ form.classic {
             }
             &[type=file] {
                 &::file-selector-button {
-                    background: var(--button-bg);
+                    background: var(--btn-bg);
                     border: 2px outset @btn-border; border-radius: 50px;
                     color: @text-link; cursor: pointer;
                     font-family: #fonts[sans]; font-size: @btn-font-size;
@@ -272,7 +292,7 @@ form.classic {
                 border: 2px inset @input-border; height: 1.75rem;
             }
             &[readonly=readonly] {
-                color: @text-disabled;
+                background: var(--bg-lightest); color: @text-disabled;
             }
             &[readonly=readonly][type=datetime-local]:not(.tile) {
                 background: var(--bg-lighter-semitrans);
@@ -289,17 +309,29 @@ form.classic {
             }
         }
         select {
-            background: var(--button-bg); border: 2px inset @input-border;
+            background: var(--btn-bg); border: 2px inset @input-border;
             max-width: @select-max-width; min-width: @select-min-width;
             padding: 0.1875rem 0.25rem;
             &:not(.select-multiple) option {
                 font-family: #fonts[sans]; font-size: @system-font-size;
             }
-            &.select-multiple option {
-                min-width: @select-option-min-width; padding: 0.125rem;
-            }
-            &.select-multiple option[selected=selected] {
-                background: var(--bg-dark);
+            &.select-multiple {
+                resize: vertical;
+                option {
+                    background: @select-bg-false;
+                    min-width: @select-option-min-width; padding: 0.125rem;
+                    &[selected=selected] {
+                        background: @select-bg-true;
+                    }
+                    &:first-child {
+                        border-top-left-radius: 3px;
+                        border-top-right-radius: 3px;
+                    }
+                    &:last-child {
+                        border-bottom-left-radius: 3px;
+                        border-bottom-right-radius: 3px;
+                    }
+                }
             }
         }
         textarea {
@@ -328,6 +360,7 @@ form.classic {
             display: inline-block;
         }
         .alert-info {
+            background: var(--bg-darker);
             box-shadow: 3px 3px 3px @panel-shadow;
             margin-left: -2px; min-width: @alert-info-min-width;
         }
@@ -340,23 +373,53 @@ form.classic {
             }
         }
     }
+    .checkbox-wrapper {
+        display: flex; isolation: isolate;
+        padding: 2px 0; position: relative;
+        &::before {
+            background: @checkbox-bg-false;
+            border: 2px inset @btn-border; border-radius: 10px;
+            content: ''; display: block; position: absolute;
+            height: @checkbox-height; left: 0; width: @checkbox-width;
+            z-index: 1;
+        }
+        &::after {
+            background: var(--btn-bg);
+            border: 2px inset @btn-border; border-radius: 10px;
+            content: ''; display: block; position: absolute;
+            height: @checkbox-height; left: 0;
+            width: @checkbox-width-knob; z-index: 2;
+        }
+        &:has(input[type=checkbox]:checked) {
+            &::before {
+                background: @checkbox-bg-true;
+            }
+            &::after {
+                left: @checkbox-width-knob;
+            }
+        }
+        input[type=checkbox] {
+            height: @checkbox-height; margin: 0; opacity: 0;
+            position: relative; width: @checkbox-width; z-index: 3;
+        }
+    }
     .data-structure, .input-button, .input-selector {
         isolation: isolate;
         a.form-button, button {
-            background: var(--button-bg); border: 2px outset @btn-border;
+            background: var(--btn-bg); border: 2px outset @btn-border;
             border-radius: 50px; color: @text-link;
             cursor: pointer; display: inline-block; overflow: hidden;
             position: relative; text-decoration: none;
             transition: border 0.5s, color 0.5s;
             &::before {
-                background: var(--button-bg-highlight); content: '';
+                background: var(--btn-bg-highlight); content: '';
                 display: block; height: 3rem; left: var(--x); opacity: 0;
                 position: absolute; top: var(--y);
                 transform: translate(-50%, -50%); transition: opacity 0.5s;
                 width: 3rem; z-index: 1;
             }
             &::after {
-                background: var(--button-bg); border-radius: 50px; content: '';
+                background: var(--btn-bg); border-radius: 50px; content: '';
                 inset: 3px; position: absolute; z-index: 2;
             }
             &:hover {
@@ -366,7 +429,7 @@ form.classic {
                 }
             }
             &[disabled=disabled], &[disabled=disabled]::after {
-                background: var(--button-bg-disabled);
+                background: var(--btn-bg-disabled);
             }
             span, svg {
                 font-family: #fonts[sans]; font-size: @btn-font-size;
@@ -469,7 +532,7 @@ form.classic {
             border-radius: 5px; border-bottom-left-radius: 0;
             border-top-left-radius: 0; padding: 0.125rem 0 0 0.25rem;
             .ds-remove-icon {
-                align-items: center; background: var(--button-bg);
+                align-items: center; background: var(--btn-bg);
                 border-radius: 3px; box-shadow: 2px 2px 2px @panel-shadow;
                 color: @text-close; cursor: pointer; display: flex;
                 font-family: #fonts[sans]; font-size: @system-font-size;
@@ -497,36 +560,6 @@ form.classic {
         }
         &:has(input:focus) .checkbox-wrapper::before {
             outline: 1px solid @field-focus-outline;
-        }
-        .checkbox-wrapper {
-            display: flex; grid-area: input; isolation: isolate;
-            padding: 2px 0; position: relative;
-            &::before {
-                background: @checkbox-bg-false;
-                border: 2px inset @btn-border; border-radius: 10px;
-                content: ''; display: block; position: absolute;
-                height: @checkbox-height; left: 0; width: @checkbox-width;
-                z-index: 1;
-            }
-            &::after {
-                background: var(--button-bg);
-                border: 2px inset @btn-border; border-radius: 10px;
-                content: ''; display: block; position: absolute;
-                height: @checkbox-height; left: 0;
-                width: @checkbox-width-knob; z-index: 2;
-            }
-            &:has(input[type=checkbox]:checked) {
-                &::before {
-                    background: @checkbox-bg-true;
-                }
-                &::after {
-                    left: @checkbox-width-knob;
-                }
-            }
-            input[type=checkbox] {
-                height: @checkbox-height; margin: 0; opacity: 0;
-                position: relative; width: @checkbox-width; z-index: 3;
-            }
         }
     }
     .input-button {
@@ -696,10 +729,34 @@ form.classic {
     .input-password .reveal {
         cursor: pointer; grid-area: selector;
     }
-    .input-select:has(.select-multiple) {
-        align-items: flex-start !important;
-        label.select-multiple {
-            padding-top: 0.4375rem;
+    .input-select {
+        &:has(.select-multiple) {
+            align-items: flex-start !important;
+            label.select-multiple {
+                padding-top: 0.4375rem;
+            }
+        }
+        .checkbox-group, .radio-group {
+            background: var(--btn-bg);
+            border: 2px inset @input-border; border-radius: 5px;
+            list-style: none; margin: 0; padding: 0.1875rem 0.25rem;
+            li {
+                align-items: center; column-gap: 0.5rem; display: grid;
+                grid-template-areas: "label box";
+                grid-template-columns: 1fr auto;
+                justify-items: flex-start;
+                input[type=checkbox], input[type=radio] {
+                    margin: 0;
+                }
+                .button-label, .checkbox-label {
+                    font-family: #fonts[serif]; font-size: @data-font-size;
+                    font-weight: @data-font-weight; grid-area: label;
+                    white-space: nowrap;
+                }
+                .button-wrapper, .checkbox-wrapper {
+                    grid-area: box;
+                }
+            }
         }
     }
     .input-selector button {
